// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack loader should convert file (babel: false) 1`] = `
"import * as React from \\"react\\";

function SvgIcon() {
  return /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37L37 51M51 51L37 37\\"
  })));
}

export default SvgIcon;"
`;

exports[`webpack loader should convert file 1`] = `
"import * as React from \\"react\\";

var _ref = /*#__PURE__*/React.createElement(\\"svg\\", {
  width: 88,
  height: 88,
  xmlns: \\"http://www.w3.org/2000/svg\\"
}, /*#__PURE__*/React.createElement(\\"g\\", {
  stroke: \\"#063855\\",
  strokeWidth: 2,
  fill: \\"none\\",
  fillRule: \\"evenodd\\",
  strokeLinecap: \\"square\\"
}, /*#__PURE__*/React.createElement(\\"path\\", {
  d: \\"M51 37L37 51M51 51L37 37\\"
})));

function SvgIcon() {
  return _ref;
}

export default SvgIcon;"
`;

exports[`webpack loader should convert file for Inferno 1`] = `
"import { createVNode } from \\"inferno\\";

var _ref = createVNode(32, \\"svg\\", null, createVNode(32, \\"g\\", null, createVNode(32, \\"path\\", null, null, 1, {
  \\"d\\": \\"M51 37L37 51M51 51L37 37\\"
}), 2, {
  \\"stroke\\": \\"#063855\\",
  \\"stroke-width\\": 2,
  \\"fill\\": \\"none\\",
  \\"fill-rule\\": \\"evenodd\\",
  \\"stroke-linecap\\": \\"square\\"
}), 2, {
  \\"width\\": 88,
  \\"height\\": 88,
  \\"xmlns\\": \\"http://www.w3.org/2000/svg\\"
});

function SvgIcon() {
  return _ref;
}

export default SvgIcon;"
`;

exports[`webpack loader should convert file for Inferno with props 1`] = `
"import { createVNode, normalizeProps } from \\"inferno\\";

function ownKeys(object, enumerableOnly) { var keys = Object.keys(object); if (Object.getOwnPropertySymbols) { var symbols = Object.getOwnPropertySymbols(object); if (enumerableOnly) symbols = symbols.filter(function (sym) { return Object.getOwnPropertyDescriptor(object, sym).enumerable; }); keys.push.apply(keys, symbols); } return keys; }

function _objectSpread(target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i] != null ? arguments[i] : {}; if (i % 2) { ownKeys(Object(source), true).forEach(function (key) { _defineProperty(target, key, source[key]); }); } else if (Object.getOwnPropertyDescriptors) { Object.defineProperties(target, Object.getOwnPropertyDescriptors(source)); } else { ownKeys(Object(source)).forEach(function (key) { Object.defineProperty(target, key, Object.getOwnPropertyDescriptor(source, key)); }); } } return target; }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

function SvgIcon(props) {
  return normalizeProps(createVNode(32, \\"svg\\", null, createVNode(32, \\"g\\", null, createVNode(32, \\"path\\", null, null, 1, {
    \\"d\\": \\"M51 37L37 51M51 51L37 37\\"
  }), 2, {
    \\"stroke\\": \\"#063855\\",
    \\"stroke-width\\": 2,
    \\"fill\\": \\"none\\",
    \\"fill-rule\\": \\"evenodd\\",
    \\"stroke-linecap\\": \\"square\\"
  }), 2, _objectSpread({
    \\"width\\": 88,
    \\"height\\": 88,
    \\"xmlns\\": \\"http://www.w3.org/2000/svg\\"
  }, props)));
}

export default SvgIcon;"
`;

exports[`webpack loader should support url-loader 1`] = `
"import * as React from \\"react\\";

var _ref = /*#__PURE__*/React.createElement(\\"svg\\", {
  width: 88,
  height: 88,
  xmlns: \\"http://www.w3.org/2000/svg\\"
}, /*#__PURE__*/React.createElement(\\"g\\", {
  stroke: \\"#063855\\",
  strokeWidth: 2,
  fill: \\"none\\",
  fillRule: \\"evenodd\\",
  strokeLinecap: \\"square\\"
}, /*#__PURE__*/React.createElement(\\"path\\", {
  d: \\"M51 37L37 51M51 51L37 37\\"
})));

function SvgIcon() {
  return _ref;
}

export default \\"data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iODhweCIgaGVpZ2h0PSI4OHB4IiB2aWV3Qm94PSIwIDAgODggODgiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDQ2LjIgKDQ0NDk2KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDx0aXRsZT5EaXNtaXNzPC90aXRsZT4KICAgIDxkZXNjPkNyZWF0ZWQgd2l0aCBTa2V0Y2guPC9kZXNjPgogICAgPGRlZnM+PC9kZWZzPgogICAgPGcgaWQ9IkJsb2NrcyIgc3Ryb2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjEiIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCIgc3Ryb2tlLWxpbmVjYXA9InNxdWFyZSI+CiAgICAgICAgPGcgaWQ9IkRpc21pc3MiIHN0cm9rZT0iIzA2Mzg1NSIgc3Ryb2tlLXdpZHRoPSIyIj4KICAgICAgICAgICAgPHBhdGggZD0iTTUxLDM3IEwzNyw1MSIgaWQ9IlNoYXBlIj48L3BhdGg+CiAgICAgICAgICAgIDxwYXRoIGQ9Ik01MSw1MSBMMzcsMzciIGlkPSJTaGFwZSI+PC9wYXRoPgogICAgICAgIDwvZz4KICAgIDwvZz4KPC9zdmc+Cg==\\";
export { SvgIcon as ReactComponent };"
`;
